--- a/src/UserOutput/UserOutput.css
+++ b/src/UserOutput/UserOutput.css
@@ -1,3 +1,7 @@
 .UserOutput{
-    
+    width: 320px;
+    height: 320px;
+    margin: 1rem;
+    display: inline-block;
+    box-shadow: 0 8px 10px 1px rgba(0, 0, 0, .14), 0 3px 14px 2px rgba(0, 0, 0, .12), 0 5px 5px -3px rgba(0, 0, 0, .2);   
 }
